--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1>Testando o uso de iframes</h1>
-        <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
-        <p>O site do <ifram src="https://www.google.com.br" frameborder="0"></ifram> também é muito legal !</p>
+        <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500"></iframe> para aprender a programar</p>
+        <p>O repositório do Guanabara no<iframe src="https://gustavoguanabara.github.io" height="500" width="500"></iframe>><a href="https://gustavoguanabara.github.io">GitHub</a></iframe>também é bem legal</p>
+        <iframe src="iframe002.html" height="500" width="500"></iframe>
+        <p>Tabela legal</p>
+        <iframe src="../ex023/tabela006.html" height="600" width="700"></iframe>
     </body>
 </html>
