--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -47,7 +47,7 @@
                 border-radius: 100px;
             }
 
-            section > nav > img:hover {
+            section > nav > a > img:hover {
                 border: 2px solid orange;
             }
         </style>
@@ -61,12 +61,12 @@
         </main>
         <section>
             <nav>
-                <a href="pages/home.html" target="iframe-show" class="diminuir"><img src="imagens/logo-home.jpg"></a>
-                <a href="pages/youtube.html" target="iframe-show" class="diminuir"><img src="imagens/logo-youtube.jpg"></a>
-                <a href="" target="iframe-show" class="diminuir"><img src="imagens/logo-github.jpg"></a>
-                <a href="" target="iframe-show" class="diminuir"><img src="imagens/logo-instagram.jpg"></a>
-                <a href="" target="iframe-show" class="diminuir"><img src="imagens/logo-twitter.jpg"></a>
-                <a href="" target="iframe-show" class="diminuir"><img src="imagens/logo-facebook.jpg"></a>
+                <a href="pages/home.html" target="iframe-show"><img src="imagens/logo-home.jpg" class="diminuir"></a>
+                <a href="pages/youtube.html" target="iframe-show"><img src="imagens/logo-youtube.jpg" class="diminuir"></a>
+                <a href="pages/github.html" target="iframe-show" ><img class="diminuir" src="imagens/logo-github.jpg"></a>
+                <a href="pages/instagram.html" target="iframe-show" ><img class="diminuir" src="imagens/logo-instagram.jpg"></a>
+                <a href="pages/twitter.html" target="iframe-show" ><img class="diminuir" src="imagens/logo-twitter.jpg"></a>
+                <a href="pages/facebook.html" target="iframe-show" ><img class="diminuir" src="imagens/logo-facebook.jpg"></a>
             </nav>
         </section>
     </body>
